--- a/package.yaml
+++ b/package.yaml
@@ -42,7 +42,7 @@ dependencies:
 - stm-containers >= 1.1
 - concurrent-extra >= 0.7
 - focus >= 1.0
-- data-default >= 0.7
+- data-default-extra >= 0.1.0
 - hashable >= 1.2
 - retry >= 0.7
 - time >= 1.8  # aeson dep
