--- a/calamity.cabal
+++ b/calamity.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: ca11a84d427c7f4c38290eee8d70b5b6933540adaf16e8ebd4fa622d63300b2c
+-- hash: 335d2a2b14b77c7ea3a6e1830c21ec21efac45a47f67d6e9ae5984b70d437faf
 
 name:           calamity
 version:        0.1.0.0
@@ -44,6 +44,7 @@ library
       Calamity.HTTP
       Calamity.HTTP.Channel
       Calamity.HTTP.Emoji
+      Calamity.HTTP.Guild
       Calamity.HTTP.Internal.Ratelimit
       Calamity.HTTP.Internal.Request
       Calamity.HTTP.Internal.Route
@@ -80,24 +81,23 @@ library
     , exceptions >=0.10
     , fmt >=0.6
     , focus >=1.0
-    , generic-lens >=1.1
+    , generic-lens >=1.2
     , hashable >=1.2
     , http-date >=0.0.8
     , http-types >=0.12
     , lens >=4.17
-    , lens-aeson >=1.0
+    , lens-aeson >=1.1
     , monad-control >=1.0
     , mtl >=2.2
     , pqueue >=1.4
     , protolude >=0.2
     , reflection >=2.1
-    , retry >=0.7
     , scientific >=0.3
     , simple-log >=0.9
-    , stm >=2.4
+    , stm >=2.5
     , stm-containers >=1.1
-    , streamly >=0.6
-    , text >=0.2
+    , streamly >=0.7
+    , text >=1.2
     , text-short >=0.1
     , time >=1.8
     , transformers >=0.5
@@ -134,24 +134,23 @@ executable test-calamity-exe
     , exceptions >=0.10
     , fmt >=0.6
     , focus >=1.0
-    , generic-lens >=1.1
+    , generic-lens >=1.2
     , hashable >=1.2
     , http-date >=0.0.8
     , http-types >=0.12
     , lens >=4.17
-    , lens-aeson >=1.0
+    , lens-aeson >=1.1
     , monad-control >=1.0
     , mtl >=2.2
     , pqueue >=1.4
     , protolude >=0.2
     , reflection >=2.1
-    , retry >=0.7
     , scientific >=0.3
     , simple-log >=0.9
-    , stm >=2.4
+    , stm >=2.5
     , stm-containers >=1.1
-    , streamly >=0.6
-    , text >=0.2
+    , streamly >=0.7
+    , text >=1.2
     , text-short >=0.1
     , time >=1.8
     , transformers >=0.5
@@ -186,24 +185,23 @@ test-suite calamity-test
     , exceptions >=0.10
     , fmt >=0.6
     , focus >=1.0
-    , generic-lens >=1.1
+    , generic-lens >=1.2
     , hashable >=1.2
     , http-date >=0.0.8
     , http-types >=0.12
     , lens >=4.17
-    , lens-aeson >=1.0
+    , lens-aeson >=1.1
     , monad-control >=1.0
     , mtl >=2.2
     , pqueue >=1.4
     , protolude >=0.2
     , reflection >=2.1
-    , retry >=0.7
     , scientific >=0.3
     , simple-log >=0.9
-    , stm >=2.4
+    , stm >=2.5
     , stm-containers >=1.1
-    , streamly >=0.6
-    , text >=0.2
+    , streamly >=0.7
+    , text >=1.2
     , text-short >=0.1
     , time >=1.8
     , transformers >=0.5
