--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-14.19
+resolver: lts-14.27
 
 # docker:
 #   enable: true
@@ -41,6 +41,11 @@ packages:
 # using the same syntax as the packages field.
 # (e.g., acme-missiles-0.3)
 extra-deps:
+  - df1-0.3.2@sha256:2096eb43c090a80a8414aad692708ab7cfbdd9dc839d15379c20ce8a5549c0f6,1106
+  - di-df1-1.2@sha256:0764003cd635d3dace95ab935323976faa6443441be8e5341194436c12a574f7,997
+  - di-handle-1.0.1@sha256:642ce26cc3b166e14782fb3d3acc4a15533e1021bcd6712704531f71c9483d24,720
+  - polysemy-1.3.0.0@sha256:2254c11bed4f6e4b115fa470f396f9df4c7d2d3431b02bdbde962300d6892bf1,5919
+  - polysemy-plugin-0.2.5.0
   - typerep-map-0.3.2
   - text-show-3.8.2
   - stm-containers-1.1.0.4
@@ -74,6 +79,8 @@ extra-deps:
     commit: f8f2d8d571f76b2df2cec73a08e29519fa681d7b
     size: 129361
     sha256: 9d9949599155cff09ac5bb83042b4256f8d9572ee7693dbab6c93a8635d45cdc
+  - github: nitros12/di-polysemy
+    commit: 6355b7998ebab46c4794ff27a92078abda60e9b1
 
 
 # Override default flag values for local packages and extra-deps
