--- a/package.yaml
+++ b/package.yaml
@@ -24,44 +24,37 @@ dependencies:
 - websockets >= 0.12
 - wuss >= 1.1
 - wreq >= 0.5
-- lens >= 4.17
+- lens >= 4.18
 - stm >= 2.5
 - http-types >= 0.12
 - aeson >= 1.4
 - lens-aeson >= 1.1
 - typerep-map >= 0.3
 - protolude >= 0.2
-- streamly >= 0.7
-- generic-lens >= 1.2
-- transformers >= 0.5
-- mtl >= 2.2
+- generic-lens >= 2.0
 - text >= 1.2
-- concurrent-state >= 0.6
 - exceptions >= 0.10
 - fmt >= 0.6
 - stm-containers >= 1.1
 - stm-chans >= 3.0
 - concurrent-extra >= 0.7
 - focus >= 1.0
-- data-default-extra >= 0.1.0
+- data-default-class >= 0.1
 - hashable >= 1.2
 - time >= 1.8  # aeson dep
 - unordered-containers >= 0.2
 - http-date >= 0.0.8
 - bytestring >= 0.10
-- monad-control >= 1.0
-- transformers-base >= 0.4
 - async >= 2.2
-- simple-log >= 0.9
 - scientific >= 0.3
 - pqueue >= 1.4
 - text-short >= 0.1
 - vector >= 0.12
 - reflection >= 2.1
-- polysemy >= 0.3
+- polysemy >= 1.3
 - polysemy-plugin >= 0.2
 - di-polysemy
-- df1
+- df1 >= 0.3
 
 executables:
   test-calamity-exe:
@@ -70,10 +63,11 @@ executables:
     ghc-options:
       - -fplugin=Polysemy.Plugin
       - -funbox-strict-fields
+      - -flate-specialise
       - -threaded
       - -rtsopts
       - -with-rtsopts=-T
-      - -O3
+      - -O2
     dependencies:
       - calamity
 
