--- a/package.yaml
+++ b/package.yaml
@@ -53,7 +53,7 @@ dependencies:
 - reflection >= 2.1
 - polysemy >= 1.3
 - polysemy-plugin >= 0.2
-- di-polysemy
+- di-polysemy >= 0.0.2
 - df1 >= 0.3
 
 executables:
