--- a/stack.yaml
+++ b/stack.yaml
@@ -56,13 +56,11 @@ extra-deps:
   - primitive-0.7.0.1@sha256:a381571c36edc7dca28b77fe8159b43c14c640087ec5946adacf949feec64231,3433
   - primitive-extras-0.8@sha256:fca0310150496867f5b9421fe1541ecda87fae17eae44885a29f9c52dd00c8ff,2963
   - primitive-unlifted-0.1.3.0@sha256:a98f827740f5dcf097d885b3a47c32f4462204449620abc9d51b8c4f8619f9e6,1427
-  - github: nitros12/wreq
-    commit: f8f2d8d571f76b2df2cec73a08e29519fa681d7b
-    size: 129361
-    sha256: 9d9949599155cff09ac5bb83042b4256f8d9572ee7693dbab6c93a8635d45cdc
-  - github: nitros12/di-polysemy
+  - git: https://github.com/nitros12/wreq
+    commit: d80bf7d939aab3664e0b9c48efefd22a243df48b
+  - git: https://github.com/nitros12/di-polysemy
     commit: 863cc0072d846b1d96eca6467bc836bd098f7bb7
-  - github: estatico/generic-override
+  - git: https://github.com/estatico/generic-override
     commit: cbc64fa80dffb492187772b6343fe8e11443769a
     subdirs:
       - .
