--- a/package.yaml
+++ b/package.yaml
@@ -14,6 +14,8 @@ category:           Network, Web
 extra-source-files:
   - README.md
   - ChangeLog.md
+  - cabal.project
+  - cabal.project.freeze
 
 extra-doc-files:
   - README.md
