--- a/cabal.project
+++ b/cabal.project
@@ -7,8 +7,8 @@ packages:
 
 source-repository-package
     type: git
-    location: https://github.com/nitros12/wreq
-    tag: d80bf7d939aab3664e0b9c48efefd22a243df48b
+    location: https://github.com/nitros12/wreq-patchable
+    tag: 4d0bd500909e3739c3c8baf17b625bb381a25f97
 
 source-repository-package
     type: git
