--- a/calamity.cabal
+++ b/calamity.cabal
@@ -1,10 +1,10 @@
 cabal-version: 1.18
 
--- This file has been generated from package.yaml by hpack version 0.33.0.
+-- This file has been generated from package.yaml by hpack version 0.31.2.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 8c9fd9a8a46882aec4387b515a66916353267b128a485a94851bea62d35bb3d6
+-- hash: fb0a01673142ef3c08e66e4f8da9dd9cb81a6392aea94ce7a171faf1f4f72980
 
 name:           calamity
 version:        0.1.0.0
@@ -134,6 +134,6 @@ library
     , unordered-containers >=0.2
     , vector >=0.12
     , websockets >=0.12
-    , wreq >=0.5
+    , wreq-patchable >=0.5
     , wuss >=1.1
   default-language: Haskell2010
