--- a/package.yaml
+++ b/package.yaml
@@ -26,43 +26,43 @@ description:        Please see the README on GitHub at <https://github.com/nitro
 
 dependencies:
 - base >= 4.12 && < 5
-- websockets >= 0.12
-- wuss >= 1.1
-- wreq-patchable >= 0.5
-- lens >= 4.18
-- stm >= 2.5
-- http-types >= 0.12
-- aeson >= 1.4
-- lens-aeson >= 1.1
-- typerep-map >= 0.3
-- generic-lens >= 2.0
-- text >= 1.2
-- exceptions >= 0.10
-- fmt >= 0.6
-- stm-containers >= 1.1
-- stm-chans >= 3.0
-- concurrent-extra >= 0.7
-- focus >= 1.0
-- data-default-class >= 0.1
-- hashable >= 1.2
-- time >= 1.8  # aeson dep
-- unordered-containers >= 0.2
-- http-date >= 0.0.8
-- bytestring >= 0.10
-- async >= 2.2
-- scientific >= 0.3
-- deque >= 0.1
-- vector >= 0.12
-- reflection >= 2.1
-- polysemy >= 1.3
-- polysemy-plugin >= 0.2
-- di-polysemy >= 0.0.2
-- df1 >= 0.3
-- generic-override >= 0.0.0.1
-- generic-override-aeson >= 0.0.0.1
-- deepseq >= 1.4.4.0
-- text-show >= 3.8
-- mtl >= 2.2
+- websockets >= 0.12 && < 0.13
+- wuss >= 1.1 && < 2
+- wreq-patchable >= 0.5 && < 0.6
+- lens >= 4.18 && < 5
+- stm >= 2.5 && < 3
+- http-types >= 0.12 && < 0.13
+- aeson >= 1.4 && < 2
+- lens-aeson >= 1.1 && < 2
+- typerep-map >= 0.3 && < 0.4
+- generic-lens >= 2.0 && < 3
+- text >= 1.2 && < 2
+- exceptions >= 0.10 && < 0.11
+- fmt >= 0.6 && < 0.7
+- stm-containers >= 1.1 && < 2
+- stm-chans >= 3.0 && < 4
+- concurrent-extra >= 0.7 && < 0.8
+- focus >= 1.0 && < 2
+- data-default-class >= 0.1 && < 0.2
+- hashable >= 1.2 && < 2
+- time >= 1.8 && < 1.11
+- unordered-containers >= 0.2 && < 0.3
+- http-date >= 0.0.8 && < 0.1
+- bytestring >= 0.10 && < 0.11
+- async >= 2.2 && < 3
+- scientific >= 0.3 && < 0.4
+- deque >= 0.4 && < 0.5
+- vector >= 0.12 && < 0.13
+- reflection >= 2.1 && < 3
+- polysemy >= 1.3 && < 2
+- polysemy-plugin >= 0.2 && < 0.3
+- di-polysemy >= 0.0.2 && < 0.1
+- df1 >= 0.3 && < 0.4
+- generic-override >= 0.0.0.1 && < 0.0.1
+- generic-override-aeson >= 0.0.0.1 && < 0.0.1
+- deepseq >= 1.4.4.0 && < 2
+- text-show >= 3.8 && < 4
+- mtl >= 2.2 && < 3
 
 # executables:
 #   test-calamity-exe:
