--- a/calamity.cabal
+++ b/calamity.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.18
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 0340c09557893b82e62c119a228528cb39c8eadfd67fd2244f938d6649cef472
+-- hash: ba66d503fe80274a40fb73236910ca9fe0c1bf9d9a9a330cdd41199a238e8d14
 
 name:           calamity
 version:        0.1.0.0
@@ -23,7 +23,6 @@ extra-source-files:
     README.md
     ChangeLog.md
     cabal.project
-    cabal.project.freeze
 extra-doc-files:
     README.md
 
@@ -98,42 +97,42 @@ library
   default-extensions: CPP AllowAmbiguousTypes BlockArguments NoMonomorphismRestriction AutoDeriveTypeable BangPatterns BinaryLiterals UndecidableInstances ConstraintKinds DataKinds DefaultSignatures DeriveDataTypeable DeriveFoldable DeriveFunctor DeriveGeneric DeriveTraversable DoAndIfThenElse EmptyDataDecls ExistentialQuantification FlexibleContexts FlexibleInstances FunctionalDependencies GADTs DerivingVia DerivingStrategies GeneralizedNewtypeDeriving StandaloneDeriving DeriveAnyClass InstanceSigs KindSignatures LambdaCase MonadFailDesugaring MultiParamTypeClasses MultiWayIf NamedFieldPuns OverloadedStrings OverloadedLabels PartialTypeSignatures PatternGuards PolyKinds RankNTypes RecordWildCards ScopedTypeVariables TupleSections TypeFamilies TypeSynonymInstances ViewPatterns DuplicateRecordFields TypeOperators TypeApplications RoleAnnotations
   ghc-options: -fplugin=Polysemy.Plugin -funbox-strict-fields -Wall
   build-depends:
-      aeson >=1.4
-    , async >=2.2
+      aeson >=1.4 && <2
+    , async >=2.2 && <3
     , base >=4.12 && <5
-    , bytestring >=0.10
-    , concurrent-extra >=0.7
-    , data-default-class >=0.1
-    , deepseq >=1.4.4.0
-    , deque >=0.1
-    , df1 >=0.3
-    , di-polysemy >=0.0.2
-    , exceptions >=0.10
-    , fmt >=0.6
-    , focus >=1.0
-    , generic-lens >=2.0
-    , generic-override >=0.0.0.1
-    , generic-override-aeson >=0.0.0.1
-    , hashable >=1.2
-    , http-date >=0.0.8
-    , http-types >=0.12
-    , lens >=4.18
-    , lens-aeson >=1.1
-    , mtl >=2.2
-    , polysemy >=1.3
-    , polysemy-plugin >=0.2
-    , reflection >=2.1
-    , scientific >=0.3
-    , stm >=2.5
-    , stm-chans >=3.0
-    , stm-containers >=1.1
-    , text >=1.2
-    , text-show >=3.8
-    , time >=1.8
-    , typerep-map >=0.3
-    , unordered-containers >=0.2
-    , vector >=0.12
-    , websockets >=0.12
-    , wreq-patchable >=0.5
-    , wuss >=1.1
+    , bytestring >=0.10 && <0.11
+    , concurrent-extra >=0.7 && <0.8
+    , data-default-class >=0.1 && <0.2
+    , deepseq >=1.4.4.0 && <2
+    , deque >=0.4 && <0.5
+    , df1 >=0.3 && <0.4
+    , di-polysemy >=0.0.2 && <0.1
+    , exceptions >=0.10 && <0.11
+    , fmt >=0.6 && <0.7
+    , focus >=1.0 && <2
+    , generic-lens >=2.0 && <3
+    , generic-override >=0.0.0.1 && <0.0.1
+    , generic-override-aeson >=0.0.0.1 && <0.0.1
+    , hashable >=1.2 && <2
+    , http-date >=0.0.8 && <0.1
+    , http-types >=0.12 && <0.13
+    , lens >=4.18 && <5
+    , lens-aeson >=1.1 && <2
+    , mtl >=2.2 && <3
+    , polysemy >=1.3 && <2
+    , polysemy-plugin >=0.2 && <0.3
+    , reflection >=2.1 && <3
+    , scientific >=0.3 && <0.4
+    , stm >=2.5 && <3
+    , stm-chans >=3.0 && <4
+    , stm-containers >=1.1 && <2
+    , text >=1.2 && <2
+    , text-show >=3.8 && <4
+    , time >=1.8 && <1.11
+    , typerep-map >=0.3 && <0.4
+    , unordered-containers >=0.2 && <0.3
+    , vector >=0.12 && <0.13
+    , websockets >=0.12 && <0.13
+    , wreq-patchable >=0.5 && <0.6
+    , wuss >=1.1 && <2
   default-language: Haskell2010
