--- a/calamity.cabal
+++ b/calamity.cabal
@@ -1,10 +1,10 @@
 cabal-version: 1.18
 
--- This file has been generated from package.yaml by hpack version 0.33.0.
+-- This file has been generated from package.yaml by hpack version 0.31.2.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: ba66d503fe80274a40fb73236910ca9fe0c1bf9d9a9a330cdd41199a238e8d14
+-- hash: 20c373d338182ad0588d50a1f7e98c786c73cc63f2cd70ab580dd7e7166788fa
 
 name:           calamity
 version:        0.1.0.0
@@ -18,6 +18,7 @@ maintainer:     ben@bensimms.moe
 copyright:      2020 Ben Simms
 license:        MIT
 license-file:   LICENSE
+tested-with:    GHC == 8.6.5
 build-type:     Simple
 extra-source-files:
     README.md
@@ -106,13 +107,13 @@ library
     , deepseq >=1.4.4.0 && <2
     , deque >=0.4 && <0.5
     , df1 >=0.3 && <0.4
-    , di-polysemy >=0.0.2 && <0.1
+    , di-polysemy >=0.1 && <0.2
     , exceptions >=0.10 && <0.11
     , fmt >=0.6 && <0.7
     , focus >=1.0 && <2
     , generic-lens >=2.0 && <3
-    , generic-override >=0.0.0.1 && <0.0.1
-    , generic-override-aeson >=0.0.0.1 && <0.0.1
+    , generic-override >=0.0.0.0 && <0.0.1
+    , generic-override-aeson >=0.0.0.0 && <0.0.1
     , hashable >=1.2 && <2
     , http-date >=0.0.8 && <0.1
     , http-types >=0.12 && <0.13
@@ -133,6 +134,6 @@ library
     , unordered-containers >=0.2 && <0.3
     , vector >=0.12 && <0.13
     , websockets >=0.12 && <0.13
-    , wreq-patchable >=0.5 && <0.6
+    , wreq-patchable >=1.0 && <2
     , wuss >=1.1 && <2
   default-language: Haskell2010
