--- a/package.yaml
+++ b/package.yaml
@@ -1,15 +1,15 @@
 name:               calamity
 version:            0.1.0.0
 github:             "nitros12/calamity"
-synopsis:           "A library for writing discord bots"
-homepage:           "https://github.com/nitros12/calamity"
-bug-reports:        "https://github.com/nitros12/calamity/issues"
+homepage:           https://github.com/nitros12/calamity
+bug-reports:        https://github.com/nitros12/calamity/issues
 license:            MIT
 license-file:       LICENSE
 author:             "Ben Simms"
 maintainer:         "ben@bensimms.moe"
-copyright:          "2020 Ben Simms"
+copyright:          2020 Ben Simms
 category:           Network, Web
+tested-with:        GHC == 8.6.5
 
 extra-source-files:
   - README.md
@@ -19,6 +19,7 @@ extra-source-files:
 extra-doc-files:
   - README.md
 
+synopsis:           "A library for writing discord bots"
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
@@ -28,7 +29,7 @@ dependencies:
 - base >= 4.12 && < 5
 - websockets >= 0.12 && < 0.13
 - wuss >= 1.1 && < 2
-- wreq-patchable >= 0.5 && < 0.6
+- wreq-patchable >= 1.0 && < 2
 - lens >= 4.18 && < 5
 - stm >= 2.5 && < 3
 - http-types >= 0.12 && < 0.13
@@ -56,10 +57,10 @@ dependencies:
 - reflection >= 2.1 && < 3
 - polysemy >= 1.3 && < 2
 - polysemy-plugin >= 0.2 && < 0.3
-- di-polysemy >= 0.0.2 && < 0.1
+- di-polysemy >= 0.1 && < 0.2
 - df1 >= 0.3 && < 0.4
-- generic-override >= 0.0.0.1 && < 0.0.1
-- generic-override-aeson >= 0.0.0.1 && < 0.0.1
+- generic-override >= 0.0.0.0 && < 0.0.1
+- generic-override-aeson >= 0.0.0.0 && < 0.0.1
 - deepseq >= 1.4.4.0 && < 2
 - text-show >= 3.8 && < 4
 - mtl >= 2.2 && < 3
