--- a/stack.yaml
+++ b/stack.yaml
@@ -56,16 +56,10 @@ extra-deps:
   - primitive-0.7.0.1@sha256:a381571c36edc7dca28b77fe8159b43c14c640087ec5946adacf949feec64231,3433
   - primitive-extras-0.8@sha256:fca0310150496867f5b9421fe1541ecda87fae17eae44885a29f9c52dd00c8ff,2963
   - primitive-unlifted-0.1.3.0@sha256:a98f827740f5dcf097d885b3a47c32f4462204449620abc9d51b8c4f8619f9e6,1427
-  - git: https://github.com/nitros12/wreq-patchable
-    commit: 4d0bd500909e3739c3c8baf17b625bb381a25f97
-  - git: https://github.com/nitros12/di-polysemy
-    commit: 863cc0072d846b1d96eca6467bc836bd098f7bb7
-  - git: https://github.com/estatico/generic-override
-    commit: cbc64fa80dffb492187772b6343fe8e11443769a
-    subdirs:
-      - .
-      - aeson
-
+  - generic-override-0.0.0.0@sha256:4022243b06e2f225a5d09c54e26a3f545f6bc5cce07a7a8267d10fa64344a189,924
+  - generic-override-aeson-0.0.0.0@sha256:b36feb72bf33b8c93e75faac7ea99bbebfec5a22c1259d844706fd03fe71b34e,1446
+  - di-polysemy-0.1.0.0
+  - wreq-patchable-1.0.0.0
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
