--- a/calamity.cabal
+++ b/calamity.cabal
@@ -4,10 +4,10 @@ cabal-version: 1.18
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 20c373d338182ad0588d50a1f7e98c786c73cc63f2cd70ab580dd7e7166788fa
+-- hash: f2a574749d434880d7147c6519fac0ba5bf3333f5cefbf6a04435b7aad9d956c
 
 name:           calamity
-version:        0.1.0.0
+version:        0.1.1.0
 synopsis:       A library for writing discord bots
 description:    Please see the README on GitHub at <https://github.com/nitros12/calamity#readme>
 category:       Network, Web
@@ -59,6 +59,9 @@ library
       Calamity.Internal.Updateable
       Calamity.Internal.Utils
       Calamity.LogEff
+      Calamity.Metrics.Eff
+      Calamity.Metrics.Internal
+      Calamity.Metrics.Noop
       Calamity.Types
       Calamity.Types.Model
       Calamity.Types.Model.Channel
@@ -103,6 +106,7 @@ library
     , base >=4.12 && <5
     , bytestring >=0.10 && <0.11
     , concurrent-extra >=0.7 && <0.8
+    , containers >=0.6 && <0.7
     , data-default-class >=0.1 && <0.2
     , deepseq >=1.4.4.0 && <2
     , deque >=0.4 && <0.5
